--- a/02-FlexBox/assignment/css/style.scss
+++ b/02-FlexBox/assignment/css/style.scss
@@ -4,3 +4,67 @@
 @import 'settings.responsive';
 @import 'components.content';
 
+
+
+$head-color: rgb(125, 125, 125);
+$nav-color: rgb(0, 0, 0);
+$side-color: rgb(255, 255, 255);
+$main-color: rgb(107, 107, 107);
+$foot-color: rgb(14, 14, 14);
+// Defining background color variables for elements to easily differentiate them in the layout
+
+body {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 20vh 2em 80vh 20vh;
+    // Body tag specifyig rows and columns for child elements
+
+    header {
+        grid-column: 1 / span 4;
+        grid-row: 1 / span 2;
+        background: $head-color;
+        // Header spanning all colums and first row
+    }
+
+    nav {
+        display: flex;
+        background: $nav-color;
+        grid-column: 1 / span 4;
+        grid-row: 2 / span 3;
+        // Nav spanning all columns and second row, also displaying flex for aligning nav links
+
+        a {
+            justify-content: space-between;
+            margin-left: 2em;
+            text-decoration: none;
+            color: white;
+        }
+        // Nav links with left margin and flex spacing for separation
+    }
+
+    aside {
+        background: $side-color;
+        grid-column: 1 / span 1;
+        grid-row: 3 / span 4;
+    }
+    // Aside tag for sidebar, spans the leftmost of 3 columns and the third row alongside main
+
+    main {
+        background: $main-color;
+        grid-column: 2 / span 4;
+        grid-row: 3 / span 4;
+    }
+    // Main content to the right of sidebar, spans the remaining two columns in the same row as sidebar
+    
+    footer {
+        background: $foot-color;
+        grid-column: 1 / span 3;
+        grid-row: 4 / span 5;
+    }
+    //Footer spanning all columns and the final row
+}
+
+
+
+
+
